fix: btn font size too small for tapis docs

--- a/taccsite_cms/static/site_cms/css/src/_migrations/v1_v2/override-v3.site.css
+++ b/taccsite_cms/static/site_cms/css/src/_migrations/v1_v2/override-v3.site.css
@@ -9,3 +9,11 @@ h1 + h2,
 h1 + hr {
   margin-top: 21px;
 }
+
+/* To restore font size of buttons (whose text appears ot small on TAPIS) */
+/* https://confluence.tacc.utexas.edu/x/_YqkEQ */
+/* https://tapis-project.org/documentation/ */
+.btn {
+  /* FAQ: Bootstrap 1rem = browser default html 16px, but TACC sets html 10px */
+  font-size: 16px;
+}
